# thinkforce-fastllm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
example/apiserver/: json11.hpp
example/benchmark/: benchmark.cpp
example/visual/: vl.cpp
include/: device.h  executor.h  fastllm.h  model.h
include/devices/cpu/: cpudevice.h
include/devices/cuda/: cudadevice.h  fastllm-cuda.cuh
include/devices/tfacc/: fastllm-tfacc.h  tfaccdevice.h
include/models/: basellm.h  decicoder.h  qwen.h  stablediffusion.h
include/utils/: utils.h
src/: device.cpp  executor.cpp  fastllm.cpp  model.cpp
src/devices/cpu/: cpudevice.cpp
src/devices/cuda/: cudadevice.cpp  fastllm-cuda.cu
src/devices/tfacc/: fastllm-tfacc.cpp  tfaccdevice.cpp
src/models/: chatglm.cpp  decicoder.cpp  llama.cpp  qwen.cpp  stablediffusion.cpp
tools/fastllm_pytools/: llm.py  torch2flm.py
tools/scripts/: cli_demo.py  decicoder2flm.py
